--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
 [submodule "themes/butterfly"]
     path = themes/butterfly
     url = https://github.com/Windsland52/hexo-theme-butterfly.git
+    branch = master
+[submodule ".deploy_git"]
+    path = .deploy_git
+    url = https://github.com/Windsland52/hexo-theme-butterfly.git
+    branch = hexo
