--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,6 @@
 [submodule "themes/butterfly"]
     path = themes/butterfly
     url = https://github.com/Windsland52/hexo-theme-butterfly.git
-    branch = master
 [submodule ".deploy_git"]
     path = .deploy_git
-    url = https://github.com/Windsland52/windsland52.github.io.git
-    branch = hexo
+    url = https://github.com/Windsland52/windsland52.github.io.git/hexo
